testdata/golden/sema/invalid/module_inconsistent_name/second.sg
pragma module::two;

fn second() {}
